2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files: removed useless progress_bar stuff &
	the calling of useless get_movie_info().
	The movie file is opened only once. It is important for network

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp: sprintf() ==> snprintf()

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp: forgot to cleanup

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: s_total_tags is commented out
	to not read two times *.swf from network
	* net/http_client.*,
	* net/net_inetrface_tcp.cpp,
	* net/net_interface.h: Stabilization of http-tu_file

2007-04-01  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.*: fixed eof()
	some http server not send the Content-Length headers

2007-04-01  Vitaly Alexeev <tishka92@yahoo.com>

	The implementation of tu_file that support HTTP is finished
	* gameswf/gameswf_impl.cpp: use_cache_files = false (because of net files)
	* net/http_client.*,
	* net/net_inetrface_tcp.cpp,
	* net/net_interface.h:
	implementation of tu_file that support HTTP is done
	* net/test_client.cpp: added HTTP file gruber
	* net/win32/VC8/test_client.vcproj: added VC8 project file
	that grub HTTP files

2007-03-29  Vitaly Alexeev <tishka92@yahoo.com>

	The beginning of works on HTTP implementation of tu_file()
	* base/tu_file.cpp: added parsing filename on "http://"
	* net/http_client.*: added new files, its will contain 
	http implementation of tu_file
	* net/http_server.cpp: added VLOG("send response ...")
	* net/net_test.cpp,
	* net/net_interface.h:
	* net/net_interface_tcp.cpp: added url to
	tu_create_network_interface_tcp()

2007-03-29  Vitaly Alexeev <tishka92@yahoo.com>
	
	* added NEWS file

2007-03-27  Vitaly Alexeev <tishka92@yahoo.com>
	
	* net/net_test.cpp: fixed typo
	* net/win32/VC8/net_test.vcproj: added VC8 project file

2007-03-27  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_spite.cpp: cleanup
