@@ -1,5 +1,10 @@
 2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* net/http_client.cpp,
+	* net/net_interface_tcp.cpp: porting to Linux
+
+2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* a lot of files: removed useless progress_bar stuff &
 	the calling of useless get_movie_info().
 	The movie file is opened only once. It is important for network
